-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer read
Incorrect values could be read from, or even written to, an arbitrary memory location, causing incorrect computations. Reads an uninitialized pointer or its target
/src/mongo/db/query/query_planner.cpp:303: UNINIT 128695 Declaring variable "chosenIndex" without initializer.