SERVER-69099 initialized variables to null to fix coverity defect