src/mongo/db/query/query_planner.cpp
@@ -300,7 +300,7 @@ bool checkProjectionCoversQuery(OrderedPathSet& fields, const ColumnIndexEntry& 
  */
 std::pair<int, const ColumnIndexEntry*> getValidColumnIndex(
     OrderedPathSet& fields, const std::vector<ColumnIndexEntry>& columnStoreIndexes) {
-    const ColumnIndexEntry* chosenIndex;
+    const ColumnIndexEntry* chosenIndex = nullptr;
     int numValid = 0;
     for (const auto& columnStoreIndex : columnStoreIndexes) {
         if (checkProjectionCoversQuery(fields, columnStoreIndex)) {
